--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -244,7 +244,7 @@ document.getElementsByClassName("tablink")[0].click();
           customerName = node.value*/
           //Deprecated guid()
           var date = new Date("1/1/2001");
-          customerName = "mlivermore@pagerduty.com";
+          customerName = "dhuggins@pagerduty.com";
           dedupKey = customerName + date.getMinutes();
          // alert (customerName);
           var orderValue = '0';
@@ -308,7 +308,7 @@ document.getElementsByClassName("tablink")[0].click();
           //  "data":  eventObject,
           //  "headers": {
           //    "Accept": "application/vnd.pagerduty+json;version=2",
-          //    "Authorization": "Token token=V_uHsBDv3G2NxyimTYVg",
+          //    "Authorization": "Token token=216e8f046b2140c3bd070ac902e4cdda",
           //  }
           //};
           //$.ajax(settings).done(function (response) {
