--- a/Online_Travel_Site2.htm
+++ b/Online_Travel_Site2.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0062)https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm -->
-<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Book a break with TravelDuty</title>
+<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Reserve a game with Apollo Gaming</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./Online_Travel_Site1_files/w3.css">
@@ -38,30 +38,30 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     </div>
 
     <!-- Tabs -->
-    <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
+    <div id="Dates" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
       <h3>Travel the world with us</h3>
       <div class="w3-row-padding" style="margin:0 -16px;">
         <div class="w3-half">
           <label>From</label>
-          <input class="w3-input w3-border" type="text" placeholder="Departing from">
+          <input class="w3-input w3-border" type="date" placeholder="Pickup Date">
         </div>
         <div class="w3-half">
           <label>To</label>
-          <input class="w3-input w3-border" type="text" placeholder="Arriving at">
+          <input class="w3-input w3-border" type="date" placeholder="Return Date">
         </div>
       </div>
-      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search and find dates</button></p>
+      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Reservation Dates</button></p>
     </div>
 
-    <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
-      <h3>Find the best hotels</h3>
+    <div id="Game" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
+      <h3>Find the best games</h3>
       <p>Book a hotel with us and get the best fares and promotions.</p>
       <p>We know hotels - we know comfort.</p>
       <p><button class="w3-button w3-dark-grey">Search Hotels</button></p>
     </div>
 
-    <div id="Car" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
-      <h3>Best car rental in the world!</h3>
+    <div id="Pre-Order" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
+      <h3>Pre-Order the best games in the world!</h3>
       <p><span class="w3-tag w3-deep-orange">DISCOUNT!</span> Special offer if you book today: 25% off anywhere in the world with CarServiceRentalRUs</p>
       <input class="w3-input w3-border" type="text" placeholder="Pick-up point">
       <p><button class="w3-button w3-dark-grey">Search Availability</button></p>
