--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -243,7 +243,7 @@ document.getElementsByClassName("tablink")[0].click();
           node = document.getElementById('customer-name'),
           customerName = node.value*/
           //Deprecated guid()
-          var date = new Date("1/1/2001");
+          var date = new Date();
           customerName = "dhuggins@pagerduty.com";
           dedupKey = customerName + date.getMinutes();
          // alert (customerName);
