--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -32,9 +32,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <img class="w3-image" src="./Online_Travel_Site1_files/apollo.jpg" alt="Apollo" width="1400" height="600">
   <div class="w3-display-middle" style="width:65%">
     <div class="w3-bar w3-black">
-      <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Hotel</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-car w3-margin-right"></i>Rental</button>
+      <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Reserve</button>
+      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Play</button>
+      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-car w3-margin-right"></i>Status</button>
     </div>
 
     <!-- Tabs -->
