--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -39,15 +39,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
-      <h3>Travel the world with us</h3>
+      <h3>Reserve the latest games</h3>
       <div class="w3-row-padding" style="margin:0 -16px;">
         <div class="w3-half">
           <label>From</label>
-          <input class="w3-input w3-border" type="text" placeholder="Departing from">
+          <input class="w3-input w3-border" type="text" placeholder="Check-out Date">
         </div>
         <div class="w3-half">
           <label>To</label>
-          <input class="w3-input w3-border" type="text" placeholder="Arriving at">
+          <input class="w3-input w3-border" type="text" placeholder="Check-in Date">
         </div>
       </div>
       <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search and find dates</button></p>
