--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -74,7 +74,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
   <!-- Good offers -->
   <div class="w3-container w3-margin-top">
-    <h3>Good Offers Right Now</h3>
+    <h3>Trending Games</h3>
     <h6>Up to <strong>50%</strong> discount.</h6>
   </div>
   <div class="w3-row-padding w3-text-white w3-large">
