--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -80,36 +80,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <div class="w3-row-padding w3-text-white w3-large">
     <div class="w3-half w3-margin-bottom">
       <div class="w3-display-container">
-        <img src="./Online_Travel_Site1_files/cinqueterre.jpg" alt="Cinque Terre" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">Cinque Terre</span>
+        <img src="./Online_Travel_Site1_files/mario-luigi.jpg" alt="Mario" style="width:100%">
+        <span class="w3-display-bottomleft w3-padding">Mario and Luigi</span>
       </div>
     </div>
     <div class="w3-half">
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/newyork2.jpg" alt="New York" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">New York</span>
+            <img src="./Online_Travel_Site1_files/play.jpg" alt="Play" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Play</span>
           </div>
         </div>
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/sanfran.jpg" alt="San Francisco" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">San Francisco</span>
+            <img src="./Online_Travel_Site1_files/gameover.jpg" alt="Game Over" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Game Over</span>
           </div>
         </div>
       </div>
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/pisa.jpg" alt="Pisa" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Pisa</span>
+            <img src="./Online_Travel_Site1_files/kb.jpg" alt="Keyboard Games" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Keyboard Games</span>
           </div>
         </div>
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/paris.jpg" alt="Paris" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Paris</span>
+            <img src="./Online_Travel_Site1_files/darts.jpg" alt="Darts" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Darts</span>
           </div>
         </div>
       </div>
@@ -118,24 +118,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
   <!-- Explore Nature -->
   <div class="w3-container">
-    <h3>Explore Nature</h3>
-    <p>Travel with us and see nature at its finest.</p>
+    <h3>Coming Soon</h3>
+    <p>The next Appolo project is the Brain.</p>
   </div>
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
-      <img src="./Online_Travel_Site1_files/ocean2.jpg" alt="Norway" style="width:100%">
+      <img src="./Online_Travel_Site1_files/brain.jpg" alt="The Brain" style="width:100%">
       <div class="w3-container w3-white">
-        <h3>West Coast, Norway</h3>
-        <p class="w3-opacity">Roundtrip from $79</p>
+        <h3>The Brain</h3>
+        <p class="w3-opacity">Pre-Order $79</p>
         <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
         <button class="w3-button w3-margin-bottom">Buy Tickets</button>
       </div>
     </div>
     <div class="w3-half w3-margin-bottom">
-      <img src="./Online_Travel_Site1_files/mountains2.jpg" alt="Austria" style="width:100%">
+      <img src="./Online_Travel_Site1_files/mountains2.jpg" alt="Alpine" style="width:100%">
       <div class="w3-container w3-white">
-        <h3>Mountains, Austria</h3>
-        <p class="w3-opacity">One-way from $39</p>
+        <h3>Alpine Sports</h3>
+        <p class="w3-opacity">Online Only $39</p>
         <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
         <button class="w3-button w3-margin-bottom">Buy Tickets</button>
       </div>
