--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -119,7 +119,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <!-- Explore Nature -->
   <div class="w3-container">
     <h3>Coming Soon</h3>
-    <p>The next Appolo project is the Brain.</p>
+    <p>The next Apollo project is the Brain.</p>
   </div>
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
