--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -109,7 +109,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
             <img src="./Online_Travel_Site1_files/darts.jpg" alt="Darts" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Darts</span>
+            <span class="w3-display-bottomleft w3-padding">Pub Games</span>
           </div>
         </div>
       </div>
