--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -80,7 +80,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <div class="w3-row-padding w3-text-white w3-large">
     <div class="w3-half w3-margin-bottom">
       <div class="w3-display-container">
-        <img src="./Online_Travel_Site1_files/mario-luigi.jpg" alt="Mario" style="width:100%">
+        <img src="./Online_Travel_Site1_files/mario-luigi.jpg" alt="Mario and Luigi" style="width:100%">
         <span class="w3-display-bottomleft w3-padding">Mario and Luigi</span>
       </div>
     </div>
