--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -123,7 +123,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   </div>
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
-      <img src="./Online_Travel_Site1_files/brain.jpg" alt="The Brain" style="width:100%">
+      <img src="./Online_Travel_Site1_files/brain.jpeg" alt="The Brain" style="width:100%">
       <div class="w3-container w3-white">
         <h3>The Brain</h3>
         <p class="w3-opacity">Pre-Order $79</p>
