--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -88,13 +88,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/play.jpg" alt="Play" style="width:100%">
+            <img src="./Online_Travel_Site1_files/play.jpeg" alt="Play" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Play</span>
           </div>
         </div>
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/gameover.jpg" alt="Game Over" style="width:100%">
+            <img src="./Online_Travel_Site1_files/gameover.jpeg" alt="Game Over" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Game Over</span>
           </div>
         </div>
@@ -102,13 +102,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/kb.jpg" alt="Keyboard Games" style="width:100%">
+            <img src="./Online_Travel_Site1_files/kb.jpeg" alt="Keyboard Games" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Keyboard Games</span>
           </div>
         </div>
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/darts.jpg" alt="Darts" style="width:100%">
+            <img src="./Online_Travel_Site1_files/darts.jpeg" alt="Darts" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Pub Games</span>
           </div>
         </div>
