--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -50,7 +50,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
           <input class="w3-input w3-border" type="text" placeholder="Check-in Date">
         </div>
       </div>
-      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search and reserve</button></p>
+      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search and Reserve</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
