--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -119,7 +119,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <!-- Explore Nature -->
   <div class="w3-container">
     <h3>Coming Soon</h3>
-    <p>The next Apollo project is the Brain.</p>
+    <p>The Massive Apollo Project - THE BRAIN.</p>
   </div>
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
@@ -127,8 +127,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
       <div class="w3-container w3-white">
         <h3>The Brain</h3>
         <p class="w3-opacity">Pre-Order $79</p>
-        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-        <button class="w3-button w3-margin-bottom">Buy Tickets</button>
+        <button class="w3-button w3-margin-bottom">Reserve Game</button>
       </div>
     </div>
     <div class="w3-half w3-margin-bottom">
@@ -136,8 +135,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
       <div class="w3-container w3-white">
         <h3>Alpine Sports</h3>
         <p class="w3-opacity">Online Only $39</p>
-        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-        <button class="w3-button w3-margin-bottom">Buy Tickets</button>
+        <button class="w3-button w3-margin-bottom">Reserve Game</button>
       </div>
     </div>
   </div>
