--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -329,7 +329,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error connecting to search provider.')
+          alert('Error connecting to Apollo Gaming Core Services.')
           return false;
         }
         </script>
