--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 <body>
   <br/>  <br/>
-  <img height="85" width="225" src="images/argoslogo.png">
+  <img height="85" width="225" src="images/bblogo.png">
   <h1>Argos Click and Collect</h1>
 
 <br/>
-Name: <input type="text" name="customerName" id="customer-name" value="Paul Sylvester"><br>
+Name: <input type="text" name="customerName" id="customer-name" value="Stephanie Wong"><br>
 
 <br/>
 
