--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" http-equiv="Cache-control" content="NO-CACHE">
 
-  <title>Apollo Games Click and Collect</title>
+  <title>Best Buy Games Click and Collect</title>
 
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -38,7 +38,7 @@
 <body>
   <br/>  <br/>
   <img height="85" width="225" src="images/bblogo.png">
-  <h1>Argos Click and Collect</h1>
+  <h1>Best Buy Click and Collect</h1>
 
 <br/>
 Name: <input type="text" name="customerName" id="customer-name" value="Stephanie Wong"><br>
@@ -62,7 +62,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
       <img src="https://www.att.com/catalog/en/skus/images/apple-iphone%20x-space%20gray-450x350.png">
     </div>
     <div class="product-details">
-      <div class="product-title">iPhone X</div>
+      <div class="product-title">iPhone XS</div>
       <p class="product-description">Our vision has always been to create an iPhone that is entirely screen. One so immersive the device itself disappears into the experience. And so intelligent it can respond to a tap, your voice, and even a glance. With iPhone X, that vision is now a reality. Say hello to the future.</p>
     </div>
     <div class="product-price">800.00</div>
