--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en-US" >
 
 <head>
   <meta charset="UTF-8" http-equiv="Cache-control" content="NO-CACHE">
