--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
       <div class="product-title">iPhone XS</div>
       <p class="product-description">Our vision has always been to create an iPhone that is entirely screen. One so immersive the device itself disappears into the experience. And so intelligent it can respond to a tap, your voice, and even a glance. With iPhone X, that vision is now a reality. Say hello to the future.</p>
     </div>
-    <div class="product-price">800.00</div>
+    <div class="product-price">$800.00</div>
     <div class="product-quantity">
       <input type="number" value="2" min="1">
     </div>
