--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
 
   <div class="product">
     <div class="product-image">
-      <img src="https://www.att.com/catalog/en/skus/images/apple-iphone%20x-space%20gray-450x350.png">
+      <img src="https://www.att.com/catalog/en/skus/images/apple-iphone%20xs%20max-space%20gray-100x160.jpg">
     </div>
     <div class="product-details">
       <div class="product-title">iPhone XS</div>
