--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
 <body>
   <br/>  <br/>
-  <img height="85" width="225" src="images/bblogo.png">
+ <!-- <img height="85" width="225" src="images/bblogo.png"> -->
+  <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
+  <img class="w3-image" src="./Online_Travel_Site1_files/apollo.jpg" alt="Apollo" width="1400" height="600">
+  <div class="w3-display-middle" style="width:65%">
   <h1>Best Buy Click and Collect</h1>
 
 <br/>
