--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
  <!-- <img height="85" width="225" src="images/bblogo.png"> -->
   <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
   <img class="w3-image" src="./images/bbindexlogo.png" alt="BestBuy" width="1400" height="155">
-  <div class="w3-display-middle" style="width:65%">
-  <h1>Best Buy Click and Collect</h1>
+   <!-- <h1>Best Buy Click and Collect</h1> -->
 
 <br/>
 Name: <input type="text" name="customerName" id="customer-name" value="Stephanie Wong"><br>
