--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <br/>  <br/>
  <!-- <img height="85" width="225" src="images/bblogo.png"> -->
-  <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
+  <!-- <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px"> -->
   <img class="w3-image" src="./images/bbindexlogo.png" alt="BestBuy" width="1400" height="155">
    <!-- <h1>Best Buy Click and Collect</h1> -->
 
