--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <body>
   <br/>  <br/>
  <!-- <img height="85" width="225" src="images/bblogo.png"> -->
-  <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
-  <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="1400" height="600">
+  <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
+  <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="100%" height="100%">
   <div class="w3-display-middle" style="width:65%">
    <!-- <h1>Best Buy Click and Collect</h1> -->
 
