--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
 
     //Deprecated guid()
     var date = new Date("1/1/2001");
-    dedupKey = customerName + date.getMinutes()
+     dedupKey = customerName + date.getMinutes() + date.getSeconds();
 
     //alert (customerName);
 
