--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
     customerName = node.value
 
     //Deprecated guid() 
-    dedupKey = customerName + date.getMinutes() + date.getSeconds();
+    dedupKey = customerName + date.getMinutes() + date.getSeconds()
 
     //alert (customerName);
 
