--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
       <div class="totals-value" id="cart-subtotal">1620.99</div>
     </div>
     <div class="totals-item">
-      <label>VAT (5%)</label>
+      <label>Sales Tax (5%)</label>
       <div class="totals-value" id="cart-tax">81.05</div>
     </div>
     <div class="totals-item">
