--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
   ' "details": { ' +
     ' "body": "[Critical] Increased response time detected on the Checkout page, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
     ' "Order Value": ' + orderValue + ', ' +
-    ' "priority": "High", ' +
+    ' "priority": "P762FGU", ' +
     ' "title": "[Critical] Increased response time detected on the Checkout page, High Error rates", ' +
     ' "event_id": "8125363154448140714", ' +
     ' "tags": "aws-prod, base, env:prod, host:farnsworth, monitor, pd_az:us-west-2c, production, xdb, xtradb", ' +
