--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "[URL]http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd[/URL]">
+<html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
+<head>
+<title></title>
+<script type="text/javascript">
+var counter = 0
+var timer;
+function countUP () {
+ counter = counter + 1;//increment the counter by 1
+ //display the new value in the div
+ document.getElementById("timer_container").innerHTML = counter;
+ }
+</script>
+</head>
+<body onload='timer=setInterval("countUP()", 1000 );'>
+<div id="timer_container">0</div>
+<div>
+<button onclick='clearInterval(timer);'>Stop Timer</button>
+<button onclick='timer=setInterval("countUP()", 1000 );'>Continue Timer</button>
+</div>
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en" >
 
