--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -13,8 +13,12 @@ function countUP () {
  }
 </script>
 </head>
- </br>
-<body onload='timer=setInterval("countUP()", 1000 );'>
+ <body onload='timer=setInterval("countUP()", 1000 );'>
+  <!-- <img height="85" width="225" src="images/bblogo.png"> -->
+  <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
+  <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
+  <div class="w3-display-middle" style="width:65%">
+   <!-- <h1>Best Buy Click and Collect</h1> -->
 <div id="timer_container">0</div>
 <div>
  </br>
