--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -2,14 +2,15 @@
  "[URL]http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd[/URL]">
 <html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
 <head>
-<title></title>
+<title>Downtime Cost</title>
 <script type="text/javascript">
 var counter = 0
 var timer;
 function countUP () {
- counter = counter + 1400;//increment the counter by 1
+ counter = counter + 140;//increment the counter by 140
  //display the new value in the div
  document.getElementById("timer_container").innerHTML = counter;
+ timer_container.style.color = 'blue'
  }
 </script>
 </head>
@@ -19,6 +20,7 @@ function countUP () {
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
    <!-- <h1>Best Buy Click and Collect</h1> -->
+  </br> 
 <div id="timer_container">0</div>
 <div>
  </br>
