--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -10,7 +10,7 @@ function countUP () {
  counter = counter + 140;//increment the counter by 140
  //display the new value in the div
  document.getElementById("timer_container").innerHTML = counter;
- timer_container.style.color = 'blue'
+ timer_container.style.color = 'red'
  }
 </script>
 </head>
