--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -20,12 +20,10 @@ function countUP () {
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
    <!-- <h1>Best Buy Click and Collect</h1> -->
-  </br> 
 <div id="timer_container">0</div>
 <div>
- </br>
-<button onclick='clearInterval(timer);'>Website Cart Up</button>
-<button onclick='timer=setInterval("countUP()", 1000 );'>Website Cart Down</button>
+<button onclick='clearInterval(timer);'>Stop Timer</button>
+<button onclick='timer=setInterval("countUP()", 1000 );'>Continue Timer</button>
 </div>
 </body>
 </html>
