--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -23,7 +23,7 @@ function countUP () {
 <div id="timer_container">0</div>
 <div>
 <button onclick='clearInterval(timer);'>Stop Cart</button>
-<button onclick='timer=setInterval("countUP()", 1000 );'>Continue Timer</button>
+<button onclick='timer=setInterval("countUP()", 1000 );'>Continue Cart</button>
 </div>
 </body>
 </html>
