--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
  "[URL]http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd[/URL]">
 <html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
+ 
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
 <head>
 <title>Downtime Cost</title>
 <script type="text/javascript">
@@ -20,7 +25,7 @@ function countUP () {
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
    <!-- <h1>Best Buy Click and Collect</h1> -->
-<div id="timer_container">0</div>
+   <div id="timer_container"><p>0</p></div>
 <div>
 <button onclick='clearInterval(timer);'>Stop Cart</button>
 <button onclick='timer=setInterval("countUP()", 1000 );'>Continue Cart</button>
