--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
  "[URL]http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd[/URL]">
 <html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
+<style>
+ p {
+    font-family: verdana;
+    font-size: 30px;
+}
+ </style>
 <head>
 <title>Downtime Cost</title>
 <script type="text/javascript">
@@ -16,11 +22,7 @@ function countUP () {
 </head>
  <body onload='timer=setInterval("countUP()", 1000 );'>
   <!-- <img height="85" width="225" src="images/bblogo.png"> -->
-  p {
-    font-family: verdana;
-    font-size: 30px;
-}
-  <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
+    <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
    <!-- <h1>Best Buy Click and Collect</h1> -->
