--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -2,7 +2,7 @@
  "[URL]http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd[/URL]">
 <html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
 <style>
- p {
+ h1 {
     font-family: verdana;
     font-size: 30px;
 }
@@ -17,6 +17,7 @@ function countUP () {
  //display the new value in the div
  document.getElementById("timer_container").innerHTML = counter;
  timer_container.style.color = 'red'
+ font-size: 30px
  }
 </script>
 </head>
@@ -26,7 +27,7 @@ function countUP () {
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
    <!-- <h1>Best Buy Click and Collect</h1> -->
-   <div id="timer_container"><p>0</p></div>
+   <div id="timer_container"><h1>0</h1></div>
 <div>
 <button onclick='clearInterval(timer);'>Stop Cart</button>
 <button onclick='timer=setInterval("countUP()", 1000 );'>Continue Cart</button>
