--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -16,7 +16,8 @@ function countUP () {
  counter = counter + 140;//increment the counter by 140
  //display the new value in the div
  document.getElementById("timer_container").innerHTML = counter;
- timer_container.style.color = 'red'
+ timer_container.style.color = 'red';
+ timer_container.fontSize = "30px"
   }
 </script>
 </head>
