--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -17,7 +17,7 @@ function countUP () {
  //display the new value in the div
  document.getElementById("timer_container").innerHTML = counter;
  timer_container.style.color = 'red';
- timer_container.fontSize = "30px"
+ timer_container.fontSize = '30px'
   }
 </script>
 </head>
