--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -2,9 +2,8 @@
  "[URL]http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd[/URL]">
 <html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
 <style>
- h1 {
-    font-family: verdana;
-    font-size: 30px;
+ p1 {
+     font-size: 30px;
 }
  </style>
 <head>
@@ -16,16 +15,16 @@ function countUP () {
  counter = counter + 140;//increment the counter by 140
  //display the new value in the div
  document.getElementById("timer_container").innerHTML = counter;
- document.getElementById("timer_container").style.fontSize = "25px";
-  }
+ document.getElementById("timer_container").style.fontSize = "30px";
+ document.getElementById("timer_container").style.color = "red";
+   }
 </script>
 </head>
  <body onload='timer=setInterval("countUP()", 1000 );'>
       <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
-      <div id="timer_container"><h1>0</h1></div>
-<div>
+      <div id="timer_container"><p1>0</p1></div>
 <button onclick='clearInterval(timer);'>Stop Cart</button>
 <button onclick='timer=setInterval("countUP()", 1000 );'>Continue Cart</button>
 </div>
