--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -3,7 +3,30 @@
 <html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
 <style>
  p1 {
-     font-size: 30px;
+  font-size: 70px;
+     
+}
+ button {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+button:hover {background-color: #3e8e41}
+
+button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
  </style>
 <head>
@@ -15,7 +38,7 @@ function countUP () {
  counter = counter + 140;//increment the counter by 140
  //display the new value in the div
  document.getElementById("timer_container").innerHTML = counter;
- document.getElementById("timer_container").style.fontSize = "30px";
+ document.getElementById("timer_container").style.fontSize = "70px";
  document.getElementById("timer_container").style.color = "red";
    }
 </script>
@@ -25,8 +48,8 @@ function countUP () {
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
       <div id="timer_container"><p1>0</p1></div>
-<button onclick='clearInterval(timer);'>Stop Cart</button>
-<button onclick='timer=setInterval("countUP()", 1000 );'>Continue Cart</button>
+<button onclick='clearInterval(timer);'>Cart Service Up</button>
+<button onclick='timer=setInterval("countUP()", 1000 );'>Cart Service Down</button>
 </div>
 </body>
 </html>
