--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -37,7 +37,7 @@ var timer;
 function countUP () {
  counter = counter + 140;//increment the counter by 140
  //display the new value in the div
- document.getElementById("timer_container").innerHTML = counter;
+ document.getElementById("timer_container").innerHTML = "$" + counter;
  document.getElementById("timer_container").style.fontSize = "90px";
  document.getElementById("timer_container").style.color = "red";
    }
