--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -2,10 +2,10 @@
  "[URL]http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd[/URL]">
 <html xmlns="[URL]http://www.w3.org/1999/xhtml[/URL]">
 <style>
+ 
  p1 {
   font-size: 90px;
-     
-}
+     }
  button {
   display: inline-block;
   padding: 15px 25px;
@@ -15,18 +15,17 @@
   text-decoration: none;
   outline: none;
   color: #fff;
-  background-color: #4CAF50;
-  border: none;
+  background-color: #4c57af;
+  border: 2px solid yellow;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 7px #999;
 }
-
-button:hover {background-color: #3e8e41}
+button:hover {background-color: red}
 
 button:active {
-  background-color: #3e8e41;
+  background-color: #4c57af;
   box-shadow: 0 5px #666;
-  transform: translateY(4px);
+  transform: translate3d(8px,8px,8px);
 }
  </style>
 <head>
@@ -37,7 +36,7 @@ var timer;
 function countUP () {
  counter = counter + 140;//increment the counter by 140
  //display the new value in the div
- document.getElementById("timer_container").innerHTML = "$" + counter;
+ document.getElementById("timer_container").innerHTML = "$ "+ counter;
  document.getElementById("timer_container").style.fontSize = "90px";
  document.getElementById("timer_container").style.color = "red";
    }
@@ -45,13 +44,13 @@ function countUP () {
 </head>
  <body onload='timer=setInterval("countUP()", 1000 );'>
       <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
-  <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
-  <div class="w3-display-middle" style="width:65%">
+  <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Best Buy" width="80%" height="80%">
+ <div class="w3-display-middle" style="width:65%"> 
    <br>
-      <div id="timer_container"><p1>0</p1></div>
+      <div id="timer_container"><p1>$ 0</p1></div>
    <br>
 <button onclick='clearInterval(timer);'>Cart Service Up</button>
-<button onclick='timer=setInterval("countUP()", 1000 );'>Cart Service Down</button>
+<button onclick='timer=setInterval("countUP()", 1000 );'>Cart Service Down</button1>
 </div>
 </body>
 </html>
