--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -50,7 +50,7 @@ function countUP () {
       <div id="timer_container"><p1>$ 0</p1></div>
    <br>
 <button onclick='clearInterval(timer);'>Cart Service Up</button>
-<button onclick='timer=setInterval("countUP()", 1000 );'>Cart Service Down</button1>
+<button onclick='timer=setInterval("countUP()", 1000 );'>Cart Service Down</button>
 </div>
 </body>
 </html>
