--- a/DowntimeCost.html
+++ b/DowntimeCost.html
@@ -21,7 +21,6 @@
   box-shadow: 0 7px #999;
 }
 button:hover {background-color: red}
-
 button:active {
   background-color: #4c57af;
   box-shadow: 0 5px #666;
@@ -42,7 +41,7 @@ function countUP () {
    }
 </script>
 </head>
- <body onload='timer=setInterval("countUP()", 1000 );'>
+ <body> 
       <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
   <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Best Buy" width="80%" height="80%">
  <div class="w3-display-middle" style="width:65%"> 
