--- a/whirl.html
+++ b/whirl.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" http-equiv="Cache-control" content="NO-CACHE">
 
-  <title>Best Buy Games Click and Collect</title>
+  <title>Whirlpool</title>
 
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -38,7 +38,7 @@
 <body>
  <!-- <img height="85" width="225" src="images/bblogo.png"> -->
   <header class="w3-display-container w3-content w3-hide-small" style="max-width:1400px">
-  <img class="w3-image" src="./Online_Travel_Site1_files/bbindexlogo.png" alt="Apollo" width="80%" height="80%">
+  <img class="w3-image" src="./Online_Travel_Site1_files/whirlpool.png" alt="Apollo" width="80%" height="80%">
   <div class="w3-display-middle" style="width:65%">
    <!-- <h1>Best Buy Click and Collect</h1> -->
 
