--- a/whirl.html
+++ b/whirl.html
@@ -61,11 +61,11 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
 
   <div class="product">
     <div class="product-image">
-      <img src="https://www.att.com/catalog/en/skus/images/apple-iphone%20xs%20max-space%20gray-100x160.jpg">
+      <img src="./images/hero-WRF954CIHZ.png">
     </div>
     <div class="product-details">
-      <div class="product-title">iPhone XS</div>
-      <p class="product-description">Our vision has always been to create an iPhone that is entirely screen. One so immersive the device itself disappears into the experience. And so intelligent it can respond to a tap, your voice, and even a glance. With iPhone X, that vision is now a reality. Say hello to the future.</p>
+      <div class="product-title">36-inch Wide Counter Depth French Door Refrigerator</div>
+      <p class="product-description"Easily store fruits and veggies of all shapes and sizes and help keep them fresh with automatic humidity control.</p>
     </div>
     <div class="product-price">999.99</div>
     <div class="product-quantity">
