--- a/whirl.html
+++ b/whirl.html
@@ -81,11 +81,11 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
 
   <div class="product">
     <div class="product-image">
-      <img src="http://media.4rgos.it/s/Argos/7258398_R_SET?$Web$&$Main570$&w=440&h=440&qlt=70&$W_TMB_440_BADGE$&topright=clearance">
+      <img src="./images/hero-WFP2411GX">
     </div>
     <div class="product-details">
-      <div class="product-title">Minecraft Deluxe Overworld Pack</div>
-      <p class="product-description">This Deluxe set includes 8 3-inch figures, accessories and more! Characters include; Creeper, Villager, Iron Golem, Steve, Alex, Zombie, Skeleton and Enderman.</p>
+      <div class="product-title">Laundry Pedestal</div>
+      <p class="product-description">Raise your Smart All-In-One Washer & Dryer for easier loading and unloading. An optional laundry pedestal1 also provides space-saving storage for detergent, fabric softener and other supplies.</p>
     </div>
     <div class="product-price">20.99</div>
     <div class="product-quantity">
