--- a/whirl.html
+++ b/whirl.html
@@ -81,7 +81,7 @@ Name: <input type="text" name="customerName" id="customer-name" value="Stephanie
 
   <div class="product">
     <div class="product-image">
-      <img src="./images/hero-WFP2411GX">
+      <img src="./images/hero-WFP2411GX.png">
     </div>
     <div class="product-details">
       <div class="product-title">Laundry Pedestal</div>
