--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -322,7 +322,7 @@ document.getElementsByClassName("tablink")[0].click();
           //});
           $.ajax({
             method: "POST",
-            url: "https://events.pagerduty.com/generic/2010-04-15/create_event.json",
+            url: "https://events.pagerduty.com/v2/enqueue",
             data: eventObject
           })
             .done(function( msg ) {
