--- a/Online_Travel_Site1.htm
+++ b/Online_Travel_Site1.htm
@@ -231,7 +231,7 @@ document.getElementsByClassName("tablink")[0].click();
         function loginErrExample() {
             //alert('In loginErrExample');
           var serviceKey = getParameterByName('service_key');
-          if (!serviceKey) serviceKey = "R016A97H6WNAO0AVFBMMTMTHI1R1SHL8"; /*ML service key*/
+          if (!serviceKey) serviceKey = "25c7766eede1452ca427a2cd12a6d457"; /*ML service key*/
          /* var x = document.getElementById("checkoutError");
           x.style.display = "none";
           document.getElementById("checkoutButton").innerHTML = "Working";*/
@@ -322,7 +322,7 @@ document.getElementsByClassName("tablink")[0].click();
           //});
           $.ajax({
             method: "POST",
-            url: "https://events.pagerduty.com/v2/enqueue",
+            url: "https://events.pagerduty.com/generic/2010-04-15/create_event.json",
             data: eventObject
           })
             .done(function( msg ) {
