--- a/apollo.htm
+++ b/apollo.htm
@@ -323,7 +323,8 @@ document.getElementsByClassName("tablink")[0].click();
           $.ajax({
             method: "POST",
             url: "https://events.pagerduty.com/generic/2010-04-15/create_event.json",
-            data: eventObject
+            data: eventObject, 
+            success: console.log(resp)
           })
             .done(function( msg ) {
              // alert( "Hello: " + msg );
