--- a/marriott_travel.html
+++ b/marriott_travel.html
@@ -74,8 +74,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
   <!-- Good offers -->
   <div class="w3-container w3-margin-top">
-    <h3>Good Offers Right Now</h3>
-    <h6>Up to <strong>50%</strong> discount.</h6>
+    <h3>JW Marriott Luxury Hotels and Resorts</h3>
+    <h6>Marriott Rewards <strong>Members</strong> offers.</h6>
   </div>
   <div class="w3-row-padding w3-text-white w3-large">
     <div class="w3-half w3-margin-bottom">
