--- a/marriott_travel.html
+++ b/marriott_travel.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0062)https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm -->
-<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Book a break with TravelDuty</title>
+<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Hotels & Resorts</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./Online_Travel_Site1_files/w3.css">
